🚨 Remove use of deprecated URL contructors